--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,12 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		<div id="Description">
-			<p>Description : en construction ...</p>
+			<h1>Ma Déscription</h1>
+			<p>En construction ...</p>
+		</div>
+		<div id="Description">
+			<h1>Mes récomponses</h1>
+			<p>En construction ...</p>
 		</div>
 		
 	
