Modification du titre

--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
 
 		<!-- TITRE -->
 		<div id="top-banner">
-			Bienvenue dans cette formation GIT !
+			Welcome bro thats a fooking title !
 		</div>
 		<div id="Description">
 			<h1>Ma Déscription</h1>
