#3: ajouts des images et modifications de hello.html

--- a/hello.html
+++ b/hello.html
@@ -20,9 +20,9 @@
 			<h1>Ma Déscription</h1>
 			<p>En construction ...</p>
 		</div>
-		<div id="Description">
-			<h1>Mes récomponses</h1>
-			<p>En construction ...</p>
+		<div id="Recompense">
+			<h1>Mes récompenses</h1>
+			<p> <img src="images/medal_bronze.png"> </p>
 		</div>
 		
 	
