--- a/hello.html
+++ b/hello.html
@@ -22,7 +22,7 @@
 		</div>
 		<div id="Recompense">
 			<h1>Mes récompenses</h1>
-			<p> <img src="images/medal_bronze.png"> </p>
+			<p> <img src="images/medal_bronze.png"> <img src="images/medal_silver.png"> </p>
 		</div>
 		
 	
