ajout commande git pull

--- a/hello.html
+++ b/hello.html
@@ -24,6 +24,10 @@
 			<h1>Mes récompenses</h1>
 			<p> <img src="images/medal_bronze.png"> <img src="images/medal_silver.png"> </p>
 		</div>
+		<div id="commandes">
+			<h1>Mes commandes</h1>
+			<p> pull </p>
+		</div>
 		
 	
 </body></html>
