ajout commande push

--- a/hello.html
+++ b/hello.html
@@ -27,6 +27,9 @@
 		<div id="commandes">
 			<h1>Mes commandes</h1>
 			<p> pull </p>
+			<h3>Autres commandes</h3>
+			<p> push </p>
+			
 		</div>
 		
 	
